--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,26 @@
-.myheading{
+/* Base styles */
+.myheading {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   padding: 70px;
 }
+
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
 }
+
 .container {
   width: 200px;
   height: 200px;
   perspective: 500px;
   margin: 100px;
 }
+
 :root {
   --background-color: #C4E5D3;
-  --color: black; /* Adjust text color for light theme */
-  --h1color: black; /* Adjust h1 color for light theme */
+  --color: black;
+  --h1color: black;
   --face-background: white;
   --face-border: rgba(255, 255, 255, 0.1);
   --face-text-color: white;
@@ -38,6 +38,7 @@ h1 {
   font-size: 120px;
   margin: 0;
 }
+
 h2 {
   color: var(--h2color);
   font-family: 'Oswald', sans-serif;
@@ -45,6 +46,7 @@ h2 {
   font-size: 90px;
   margin: 0;
 }
+
 h3 {
   color: var(--h3color);
   font-family: 'Oswald', sans-serif;
@@ -52,6 +54,7 @@ h3 {
   font-size: 60px;
   margin: 0;
 }
+
 h4 {
   color: var(--h4color);
   font-family: 'Oswald', sans-serif;
@@ -59,6 +62,7 @@ h4 {
   font-size: 30px;
   margin: 0;
 }
+
 h5 {
   color: var(--h5color);
   font-family: 'Oswald', sans-serif;
@@ -70,7 +74,160 @@ h5 {
 p {
   color: var(--color);
   font-family: 'Poppins', sans-serif;
-  font-weight: 200; 
+  font-weight: 200;
   font-size: 50px;
   margin: 0;
+}
+/* Base styles */
+.canvas-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  height: 40vh;
+  overflow: hidden;
+  position: absolute;
+  top: -5%;
+  left: 57%;
+  z-index: 1;
+}
+
+.canvas-container canvas {
+  width: 100%;
+  height: 100%;
+}
+
+/* Responsive styles */
+@media (max-width: 1200px) {
+  .canvas-container {
+    width: 80vw;
+    height: 80vh;
+    left: 10%;
+  }
+}
+
+@media (max-width: 768px) {
+  .canvas-container {
+    width: 90vw;
+    height: 70vh;
+    left: 5%;
+  }
+}
+
+@media (max-width: 480px) {
+  .canvas-container {
+    width: 16vw;
+    height: 12vh;
+    left: 5%;
+    top: 2%;
+  }
+}
+
+/* Responsive styles */
+@media (max-width: 1200px) {
+  .myheading {
+    padding: 50px;
+  }
+
+  .container {
+    width: 150px;
+    height: 150px;
+    margin: 50px;
+  }
+
+  h1 {
+    font-size: 100px;
+  }
+
+  h2 {
+    font-size: 75px;
+  }
+
+  h3 {
+    font-size: 50px;
+  }
+
+  h4 {
+    font-size: 25px;
+  }
+
+  h5 {
+    font-size: 18px;
+  }
+
+  p {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .myheading {
+    padding: 30px;
+  }
+
+  .container {
+    width: 100px;
+    height: 100px;
+    margin: 30px;
+  }
+
+  h1 {
+    font-size: 80px;
+  }
+
+  h2 {
+    font-size: 60px;
+  }
+
+  h3 {
+    font-size: 40px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  h5 {
+    font-size: 16px;
+  }
+
+  p {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 480px) {
+  .myheading {
+    padding: 20px;
+  }
+
+  .container {
+    width: 80px;
+    height: 80px;
+    margin: 20px;
+  }
+
+  h1 {
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 50px;
+  }
+
+  h3 {
+    font-size: 30px;
+  }
+
+  h4 {
+    font-size: 18px;
+  }
+
+  h5 {
+    font-size: 14px;
+  }
+
+  p {
+    font-size: 20px;
+  }
 }
